--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add deployment.yml
+          git add Deployments/deployment.yml
           git commit -m "Update image tag to ${{ github.run_number }}" || echo "No changes to commit"
           git push origin HEAD:main
         env:
