--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: true
+          fetch-depth: 0
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -46,5 +47,3 @@ jobs:
           git add Deployments/deployment.yml
           git commit -m "Update image tag to ${{ github.run_number }}" || echo "No changes to commit"
           git push origin HEAD:main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
